<resources>
    <string name="app_name">pdumaresq_B51_A04</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_matrix_size">SelectMatrixSize</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_view_saved_equations">ViewSavedEquations</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_options">Options</string>

    <string name="menu_calc">Calculator</string>
    <string name="menu_save">Save as new Matrix</string>
    <string name="menu_update">Update Matrix</string>
    <string name="menu_size">Change Size</string>
    <string name="menu_stored">Stored Equations</string>
    <string name="menu_about">About</string>
    <string name="menu_options">Settings</string>

    <string name="selectSize_title"><b>Select Matrix Size</b></string>
    <string name="selectSize_rows">Rows</string>
    <string name="selectSize_by">x</string>
    <string name="selectSize_cols">Columns</string>
    <string name="selectSize_submit">Calculate</string>

    <string name="options_SizeTitle"><b>Matrix Size</b></string>
    <string name="options_maxRows">Maximum matrix rows: </string>
    <string name="options_maxCols">Maximum matrix columns: </string>
    <string name="options_styleTitle"><b>Look and Feel</b></string>
    <string name="options_colorScheme">Color Scheme: </string>
    <string name="options_Db"><b>Database Settings</b></string>
    <string name="options_maxEntries">Maximum Entries: </string>
    <string name="options_saveSize">
        <u>Save Changes</u> (Any larger matrices will be deleted)
    </string>
    <string name="options_saveDb">
        <u>Save Changes</u> (Any older rows will be deleted)
    </string>
    <string name="options_deleteAll">Delete Stored Matrices</string>

    <string name="calc_undo">Undo</string>
    <string name="calc_redo">Redo</string>
    <string name="calc_0">0</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_dec">.</string>
    <string name="calc_row">+ ROW</string>
    <string name="calc_col">+ COL</string>
    <string name="calc_sub">&#45;</string>
    <string name="calc_back">BKSP</string>
    <string name="calc_clear">C</string>
    <string name="calc_rref">RREF</string>
    <string name="calc_Det">DET</string>
    <string name="calc_trans">AT</string>
    <string name="calc_inverse">A-1</string>

    <string name="about_title"><b>Calculatrix</b></string>
    <string name="about_author">Author: Philip Dumaresq</string>
    <string name="about_course">Course: 420-B51 (Programming V)</string>
    <string name="about_desc">
        This app is a matrix calculator that aims to give the user the
        ability to perform basic operations on up to a 15x15 matrix.

        \n\nThe calculator is able to reduce a matrix to row-echelon form, or
        reduced row-echelon form. The calculator can also find the
        inverse, or transpose of a matrix.

        \n\nFor your convenience, you\'re able to save matrices to a
        database once you\'ve performed calculations on them, that way
        you can go back and view all the operations on a single matrix.

        \n\nFor those who are running short on space, you can also set
        a cap on the amount of Matrices that can be stored in the
        database. If you currently have too many matrices though, it
        will go and delete the oldest ones there.
    </string>

    <string name="saved_equation">Equations</string>
    <string name="saved_empty">There are no matrices \n saved in your database.</string>
</resources>
