<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/lnrCalculator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.phdum.pdumaresq_b51_a04.Calculator"
    tools:showIn="@layout/activity_calculator"
    android:orientation="vertical">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="#EEE">
        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/lnrCalcDisplay"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </HorizontalScrollView>
    </ScrollView>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtDisplayEquationRaw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="25sp"
                android:text=""/>
        </HorizontalScrollView>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:visibility="gone"
                    android:id="@+id/btnKeypadUndo"
                    android:text="@string/calc_undo"
                    android:layout_weight="1" />
                <Button
                    android:visibility="gone"
                    android:id="@+id/btnKeypadRedo"
                    android:text="@string/calc_redo"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/btnKeypad7"
                    android:text="@string/calc_7"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad8"
                    android:text="@string/calc_8"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad9"
                    android:text="@string/calc_9"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadBackspace"
                    android:text="@string/calc_back"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadClear"
                    android:text="@string/calc_clear"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/btnKeypad4"
                    android:text="@string/calc_4"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad5"
                    android:text="@string/calc_5"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad6"
                    android:text="@string/calc_6"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadAddRow"
                    android:text="@string/calc_row"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadAddCol"
                    android:text="@string/calc_col"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/btnKeypad1"
                    android:text="@string/calc_1"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad2"
                    android:text="@string/calc_2"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad3"
                    android:text="@string/calc_3"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadRREF"
                    android:text="@string/calc_rref"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadREF"
                    android:text="REF"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/btnKeypadDecimal"
                    android:text="@string/calc_dec"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypad0"
                    android:text="@string/calc_0"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadNeg"
                    android:text="@string/calc_sub"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadTranspose"
                    android:text="@string/calc_trans"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnKeypadInverse"
                    android:text="@string/calc_inverse"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
