<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.phdum.pdumaresq_b51_a04.Options"
    tools:showIn="@layout/activity_options"
    android:padding="15dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:layout_marginBottom="5dp"
                android:text="@string/options_SizeTitle"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/options_maxCols"/>
                <Spinner
                    android:id="@+id/spnMaxCols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/matrixSize"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/options_maxRows"/>
                <Spinner
                    android:id="@+id/spnMaxRows"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/matrixSize"/>
            </LinearLayout>
            <TextView
                android:id="@+id/btnSaveMaxSize"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textColor="#008"
                android:text="@string/options_saveSize"/>
        </LinearLayout>

        <View
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:layout_marginBottom="5dp"
                android:text="@string/options_styleTitle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/options_colorScheme"/>
                <Spinner
                    android:id="@+id/spnColorScheme"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/colorScheme">
                </Spinner>
            </LinearLayout>
            <TextView
                android:id="@+id/btnSaveColor"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textColor="#008"
                android:text="@string/options_saveSize"/>
        </LinearLayout>

        <View
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:layout_marginBottom="5dp"
                android:text="@string/options_Db"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/options_maxEntries"/>
                <Spinner
                    android:id="@+id/spnMaxDbEntries"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </Spinner>
            </LinearLayout>
            <TextView
                android:id="@+id/btnSaveDb"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textColor="#008"
                android:text="@string/options_saveDb"/>

            <Button
                android:id="@+id/btnDeleteDb"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_deleteAll"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
